# IVio

./: .codecov.yml  .gitmodules  404.html  CMakeLists.txt  LICENSE  README.md  cpm.dependencies  formats-fasta.html  formats-fastq.html  formats-vcf.html  index.html  ivio-config.cmake  mkdocs.yml
.github/workflows/: ci.yml  ci_coverage.yml  ci_license_check.yml  ci_linux.yml  ci_macos.yml  ci_msvc.yml  ci_on_pr.yml  ci_onmerge_publish_docs.yml  cron_daily.yml  cron_daily_cpm_version.yml  cron_weekly.yml
.reuse/: dep5
api/: alignment.md  get_includes.sh  variant.md
benchmarks/: README.md
benchmarks/bam-benchmarks/: benchmark.sh  build.sh
benchmarks/bcf-benchmarks/: benchmark.sh  build.sh
benchmarks/faidx_benchmarks/: benchmark.sh
benchmarks/fasta-benchmarks/: README.md  benchmark.sh  build.sh
benchmarks/fastq-benchmarks/: benchmark.sh  build.sh
benchmarks/sam-benchmarks/: benchmark.sh  build.sh
benchmarks/utils/: benchmark.sh  build.sh
benchmarks/vcf-benchmarks/: benchmark.sh  build.sh
cmake/: seqan_require_benchmark.cmake  seqan_require_ccache.cmake  seqan_require_test.cmake
doc/: fasta.md
docs/: benchmarks.md  extra-highlights.js  formats-fasta.md  formats-fastq.md  formats-vcf.md  formats.md  index.md  python-bindings.md
docs/images/: relationship.drawio
docs/readthedocs-customization/: base.html  footer.html
docs/snippets/: CMakeLists.txt  fasta_example_01.cpp  fasta_example_02.cpp  fasta_example_03.cpp  fastq_example_01.cpp  read_vcf.cpp  simple_example.cpp  write_vcf.cpp
docs/snippets/data/: demo.fa  demo.fq
enrico/: CMakeLists.txt  README.md  fasta_benchmark.cpp
io2/: CMakeLists.txt  build.sh  io2_demo.cpp
io2/include/io2/: Input.h  Output.h  alphabet_seqan223.h  any_iter.h  common.h  fasta_reader.h  io2.h  sam_io.h  sam_io_reader.h  sam_io_writer.h  seq_io.h  seq_io_reader.h  seq_io_writer.h  seqan2_seqin_reader.h  seqan2_seqout_writer.h  typed_range.h  utils.h  vcf_io.h  vcf_io_reader.h  vcf_io_writer.h
lib/Catch2/: .gitrepo
lib/io2/: CMakeLists.txt
lib/io2/include/io2/: Input.h  Output.h  alphabet_seqan223.h  embl_reader.h  fasta_writer.h  fastq_reader.h  fastq_writer.h  genbank_reader.h  iterator.h  sam_io.h  sam_io_writer.h  vcf_io_writer.h
python-bindings/: README.md  build-wheels.sh  build.sh  pyproject.toml  setup.py
simon/: CMakeLists.txt  IO2.md  README.md
simon/bam-benchmarks/: README.md  benchmark.sh  build.sh  io2.cpp  main.cpp  seqan2.cpp
simon/bcf-benchmarks/: build.sh
simon/fasta-benchmarks/: CMakeLists.txt  README.md  bench.sh  benchmark.sh  bio.cpp  build.sh  enrico.cpp  fasta_reader_contigous.h  fasta_reader_mmap.h  fasta_reader_mmap2.h  fasta_reader_view.h  fasta_seqan223_reader.h  file.cpp  file_reader.h  io2.cpp  main.cpp  mmap_file_reader.h  seqan2.cpp  seqan3.cpp  zlib_mmap_reader.h  zlib_reader.h
simon/fasta-benchmarks/io2/: alphabet_seqan223.h  sam_io_reader.h  seq_io_reader.h
simon/fasta-benchmarks/io3/: fasta_reader.h  file_reader.h  io3.h  mmap_reader.h  stream_reader.h  zlib_file_reader.h
simon/fasta-benchmarks/src/: bio.cpp  direct.cpp  dna5_rank_view.h  extreme.cpp  fasta_reader_best.h  fasta_reader_mmap_lazy.h  fasta_reader_view.h  io2.cpp  io3.cpp  io3_mt.cpp  main.cpp  seqan2.cpp  seqan3.cpp
simon/fasta-benchmarks/src/read/: bio.cpp  direct.cpp  extreme.cpp  io2.cpp  io3.cpp  io3_mt.cpp  main.cpp
simon/fasta-benchmarks/src/read_stream/: bio.cpp  direct.cpp  extreme.cpp  io3.cpp  main.cpp
simon/fasta-benchmarks/src/write/: io3.cpp  main.cpp  rank_to_dna5.h  seqan2.cpp
simon/fastq-benchmarks/: build.sh
simon/io2/: build.sh  io2_demo.cpp
simon/io3/: bcf_reader.h  bcf_writer.cpp  bcf_writer.h  bgzf_mt_reader.h  bgzf_reader.h  bgzf_writer.h  buffered_reader.h  buffered_writer.h  concepts.h  fasta_reader.cpp  fasta_reader.h  fasta_reader_impl.h  fasta_reader_meta.h  file_reader.h  file_writer.h  io3.h  mmap_reader.h  reader_base.h  stream_reader.h  stream_writer.h  vcf_reader.h  vcf_writer.cpp  vcf_writer.h  zlib_file_reader.h  zlib_file_writer.h  zlib_mmap2_reader.h  zlib_ng_file_reader.h
simon/sam-benchmarks/: build.sh
simon/vcf-benchmarks/: build.sh  main.cpp  seqan2.cpp
snippets/: CMakeLists.txt  fasta_example_01.cpp  fasta_example_01.cpp.out  fasta_example_02.cpp  fasta_example_03.cpp  fastq_example_01.cpp.out  read_vcf.cpp  read_vcf.cpp.out  write_vcf.cpp  write_vcf.cpp.out
src/io3/: bgzf_mt_reader.h  (+10 more)
src/ivio/: CMakeLists.txt  bgzf_mt_reader.h  bgzf_reader.h  bgzf_writer.h  buffered_reader.h  buffered_writer.h  concepts.h  file_reader.h  file_writer.h  ivio.h  mmap_reader.h  reader_base.h  stream_reader.h  stream_writer.h  writer_base.h  zlib_file_reader.h  zlib_file_writer.h  zlib_mmap2_reader.h  zlib_ng_file_reader.h
src/ivio/bam/: header.h  reader.cpp  reader.h  record.h
src/ivio/bcf/: header.h  reader.cpp  reader.h  record.h  writer.cpp  writer.h
src/ivio/csv/: reader.cpp  reader.h  record.h  writer.cpp  writer.h
src/ivio/detail/: bgzf_mt_reader.h  bgzf_reader.h  bgzf_writer.h  buffered_reader.h  buffered_writer.h  compare.h  concepts.h  file_reader.h  file_writer.h  mmap_reader.h  portable_endian.h  reader_base.h  span_comparison.h  stream_reader.h  stream_writer.h  utilities.h  writer_base.h  zlib-ng.h  zlib_file_reader.h  zlib_file_writer.h  zlib_mmap2_reader.h  zlib_ng_file_reader.h
src/ivio/faidx/: reader.cpp  reader.h  record.h
src/ivio/fasta/: reader.cpp  reader.h  reader_mt.cpp  reader_mt.h  record.h  writer.cpp  writer.h
src/ivio/fasta_idx/: reader.cpp  reader.h  record.h
src/ivio/fastq/: reader.cpp  reader.h  record.h
src/ivio/sam/: reader.cpp  reader.h  record.h  writer.cpp  writer.h
src/ivio/vcf/: header.h  reader.cpp  reader.h  record.h  writer.cpp  writer.h
src/test_ivio/: CMakeLists.txt  bam_reader.cpp  bcf_mt_reader.cpp  bcf_reader.cpp  csv_reader.cpp  csv_writer.cpp  faidx_reader.cpp  fasta_reader.cpp  fasta_writer.cpp  fastq_reader.cpp  file_reader.cpp  generateSequence.h  main.cpp  sam_reader.cpp  sam_writer.cpp  utilities.h  vcf_reader.cpp  vcf_writer.cpp
svenja/: CMakeLists.txt  bio_fasta.cpp  seqan3_fasta.cpp
(+143 files in other folders)
