[project]
name = "iviopy"
version = "0.2.0"
authors = [
  { name="Simon Gene Gottlieb", email="ivio.simon@gottliebtfreitag.de" },
]
description = "IVio bioinformatic file format reader/writer"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: POSIX :: Linux",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[project.urls]
"Homepage" = "https://github.com/SGSSGene/IVio"
